--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,24 @@
+* 1.0.8 - 17/08/2015
+====================
+- Changed: Theme URL
+
+
+* 1.0.7 - 17/08/2015
+====================
+- Changed: Theme URL
+
+
+* 1.0.6 - 14/08/2015
+====================
+- Fixed: Menu item style on focus
+
+
 * 1.0.5 - 13/08/2015
 ====================
 - Fixed: Sub menu items
 - Fixed: Video overflow
 - Fixed: PHP errors on search
 - Added: Demo images license
-
 
 
 * 1.0.4 - 09/08/2015
