--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+* 1.0.12 - 12/09/2015
+====================
+- Added: Link to Documentation
+- Fixed: Theme URI
+
+
 * 1.0.11 - 11/09/2015
 ====================
 - Changed: A few lenguage text domains
